css/styles.css
body{
    font-family: 'Montserrat';
}

h1{
    font-family: 'Montserrat';
    font-weight: 900;
    font-size: 3.5rem;
    line-height: 1.5;
}

h2{
    font-size: 3rem;
    font-family: 'Montserrat';
    font-weight: bold;
    line-height: 1.5;
}

h3{
    font-size: 1.5rem;
    font-family: 'Montserrat';
    font-weight: bold;
}

p{
    color: #8f8f8f;
}

.container-fluid{
    padding: 3% 15%;
}

#title{
    background-color: #ff4c68;
    color: white;
}

/* Nav Bar */
.navbar{
    padding: 0 0 4.5rem;
}

.navbar-brand{
    font-family: "Ubuntu";
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-item{
padding: 0 18px;
}

.nav-link{
    font-weight: 400;
    font-size: 1.2rem;
}

/* Download Buttons */

.download-btn{
    margin: 5% 3% 5% 0%;
}

/* Title Image */

.title-img{
    width: 60%;
    transform: rotate(25deg);
}

/* Features section */

#features{
    padding: 7% 15%;
}

.feature-box{
    text-align: center;
    padding: 5%;
}

.icon{
    color: #ef8172;
    margin-bottom: 1rem;
}

.icon:hover{
    color: #ff4c68;
}

/* Testimonial Section */

#testimonials{
    padding: 7% 15%;
    text-align: center;
    background-color: #ef8172;
    color: white;
}

.testimonial-img{
    width: 10%;
    border-radius: 100%;
    margin: 20px;
}

.carousel-item{
    padding: 7% 15%;
}

#press{
    background-color: #ef8172;
    text-align: center;
    padding-bottom: 3%;
}

.press-logo{
    width: 15%;
    margin: 20px 20px 50px;
}

